Added block_test.js to assets and called it in angular.json

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "node_modules/blockly/lua.js",
               "node_modules/blockly/dart.js",
               "src/assets/blockly/code.js",
-              "src/assets/blockly/msg/en.js"
+              "src/assets/blockly/msg/en.js",
+              "src/assets/blockly/custom_blocks/block_test.js"
             ]
           },
           "configurations": {
